--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,21 +10,28 @@ android {
         applicationId "com.yifeplayte.wavecharge"
         minSdk 30
         targetSdk 32
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        dex {
+            useLegacyPackaging true
+        }
     }
     kotlinOptions {
         jvmTarget = '1.8'
