Optimize package size again

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     packagingOptions {
+        resources {
+            excludes += "/META-INF/**"
+            excludes += "/kotlin/**"
+            excludes += "/*.txt"
+            excludes += "/*.bin"
+        }
         dex {
             useLegacyPackaging true
         }
